--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "GamerClubAPI",
+    "name": "gamer-club-api",
     "type": "project",
     "description": "GamerClubAPI",
     "keywords": [
@@ -9,6 +9,7 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "jaeger/querylist": "^4.1",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0"
     },
