--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gamer-club-api",
+    "name": "epicdata/gamer-club-api",
     "type": "project",
     "description": "GamerClubAPI",
     "keywords": [
@@ -11,6 +11,7 @@
         "fideloper/proxy": "^4.0",
         "jaeger/querylist": "^4.1",
         "laravel/framework": "^6.0",
+        "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
