--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "jaeger/querylist": "^4.1",
         "laravel/framework": "^6.0",
