--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/scout": "^7.2",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
-        "pmatseykanets/laravel-scout-postgres": "^6.0"
+        "pmatseykanets/laravel-scout-postgres": "^6.0",
+        "weidner/goutte": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
