--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
         "pmatseykanets/laravel-scout-postgres": "^6.0",
-        "weidner/goutte": "^1.3"
+        "weidner/goutte": "^1.3",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
