--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "php": "^7.4",
         "ext-json": "*",
         "doctrine/dbal": "^2.10",
+        "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.0",
         "jaeger/querylist": "^4.1",
         "laravel/framework": "^6.0",
