--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/dbal": "^2.10",
         "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "^6.0",
         "laravel/scout": "^7.2",
         "laravel/telescope": "^2.1",
