--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,17 @@
         "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
-        "laravel/framework": "^6.0",
-        "laravel/scout": "^7.2",
-        "laravel/telescope": "^2.1",
-        "laravel/tinker": "^1.0",
-        "pmatseykanets/laravel-scout-postgres": "^6.0"
+        "laravel/framework": "^7.0",
+        "laravel/scout": "^8.2",
+        "laravel/telescope": "^3.0",
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
+        "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "nunomaduro/collision": "^4.0",
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "optimize-autoloader": true,
