feat: upgrade to laravel8

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_NAME=GamerClubAPI
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
 APP_URL=http://localhost
@@ -9,8 +9,8 @@ API_KEY=
 LOG_CHANNEL=stack
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=postgres
+DB_PORT=5432
 DB_DATABASE=default
 DB_USERNAME=root
 DB_PASSWORD=
